fixed tiny word-wrap issue on excerpts

--- a/wp-content/themes/glowline/style.css
+++ b/wp-content/themes/glowline/style.css
@@ -125,6 +125,7 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: 700;
 	letter-spacing: 1px;
 	line-height: 1; /* nicer default */
+	overflow-wrap: break-word;
 }
 
 p {
@@ -134,6 +135,7 @@ p {
 	font-size:15px;
 	font-weight:400;
 	letter-spacing: .6px;
+	overflow-wrap: break-word;
 }
 
 h1 {
